<resources>
    <string name="app_name">InspobookApp</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="my_books">My Books</string>
    <string name="profile_menu">Profile</string>
    <string name="image_search">Image Search</string>
    <string name="settings">Settings</string>
    <string name="InspoBookHeader">InspoBook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_inspobooks">My InspoBooks</string>
    <string name="select">Select</string>
    <string name="add">add</string>
    <string name="delete">Delete</string>
    <string name="edit_name">Edit Name</string>
    <string name="back"><![CDATA[< Return]]></string>
    <string name="save_drawing">Save Drawing</string>
    <string name="brush">brush</string>
    <string name="erase">erase</string>
    <string name="add_image">addImage</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="add_new_page">add new page</string>
    <string name="delete_current_page">delete current page</string>
    <string name="next_page">next page</string>
    <string name="previous_page">prev page</string>
    <string name="save_page_edits">save page</string>
    <string name="color">Color</string>
    <string name="cancel">Cancel</string>
    <string name="allow_random_color_shake">Allow Random Color Shake</string>
    <string name="appTitle">Inspo\nBook</string>
    <string name="enterEmailHintNew">Input username…</string>
    <string name="enterPasswordHintNew">Input password…</string>
    <string name="create_an_account">Create an account</string>
    <string name="clear">Clear</string>
    <string name="go_back">Go back</string>
    <string name="profileUsernameHint">\@username</string>
    <string name="about_me">About me</string>
    <string name="tell_us_about_yourself">Tell us about yourself...</string>
    <string name="change_photo">Change Photo</string>
    <string name="save">Save</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>
    <string name="enterUsernameHint">Username</string>
    <string name="enterPasswordHint">Password</string>
    <string name="version">version 1.0</string>
    <string name="info">Info</string>
    <string name="app_settings">App Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="log_out">Log Out</string>
    <string name="logged_out">Logged out</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_deleted">Account deleted</string>
    <string name="account_created">Account created!</string>
    <string name="account_deleted_fail">Failed to delete account</string>
    <string name="search_unsplash">Search Unsplash...</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="shake_device_for_a_random_selection_of_photos">Shake device for a random selection of photos</string>
    <string name="Any">Any</string>
    <string name="enter_search_term">Enter a search term</string>
    <string name="error_fetching_images">Error fetching images</string>
    <string name="error_fetching_random_photos"> Error fetching random photos</string>
    <string name="sort_by">Sort by</string>
    <string name="relevant">Relevant</string>
    <string name="latest">Latest</string>
    <string name="filter_by_color">Filter by color</string>
    <string name="save_image">Save Image</string>
    <string name="download_started">Download started</string>
    <string name="download_failed">Failed to start download</string>
    <string name="loading_random_photos">Loaded random photos</string>
    <string name="black_and_white">Black and White</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="no_previous_page">There is no previous page!</string>
    <string name="no_next_page">There is no next page!</string>
    <string name="would_you_like_to_download_this_image">Would you like to download this image?</string>
    <string name="inspobook_unsplash_image">InspoBook Unsplash Image</string>
    <string name="downloading_from_unsplash">Downloading from Unsplash</string>
    <string name="opening_book">Opening Book! Please wait…</string>
    <string name="page_saved">Page saved!</string>
    <string name="page_added">Page added!</string>
    <string name="page_cleared">Page cleared!</string>
    <string name="page_removed">Page removed!</string>
    <string name="drag_pinch_image">Drag / pinch to place image</string>
    <string name="null_inspobook_selection">Select InspoBook is null</string>
    <string name="load_image_unable">Unable to load image</string>
    <string name="load_image_error">Error loading image</string>
    <string name="select_only_one_book">Select only ONE book to edit name of</string>
    <string name="enter_email_pass">Please enter email and password</string>
    <string name="welcome">Welcome!</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="error_saving_profile">Error saving profile</string>
    <string name="login_error">Login failed: %1$s</string>
    <string name="are_you_sure_delete_account">Are you sure you would like to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="enter_new_name_inspobook">Enter new name for your selected InspoBook</string>
    <string name="change_name">Change name</string>
    <string name="signup_failed_generic">Account creation failed. Please try again.</string>
    <string name="error_email_in_use">An account with this email already exists.</string>
    <string name="error_weak_password">Password is too weak. Please choose a stronger one.</string>
    <string name="error_invalid_email">Invalid email address.</string>
    <string name="offline_alert">Offline: Please check your network connection.</string>
    <string name="login_failed_generic">Login failed. Please try again.</string>
    <string name="login_invalid_credentials">Invalid email or password.</string>

</resources>